2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_do_pass_1): Pass the right pass order to
	pkl_cal_node_handlers.
	(pkl_call_node_handlers): Adjust accordingly.

2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf-info.pk: New file.
	* pickles/dwarf.pk: Load dwarf-info.pk.
	* pickles/dwarf-common.pk: Do not load leb128.pk.
	* maps/dwarf.map: Add comment with information on DWARF related
	sections and the data stored in them.

2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-map.c (pk_cmd_map_show): Include the $ prefix in the
	map entry names.
	* testsuite/poke.cmd/maps-4.pk: Update accordingly.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf-frame.pk (Dwarf_CFI): Adapt to use Dwarf_Op for
	CFA_def_cfa_expression, CFA_expression and CFA_val_expression.
	* pickles/dwarf-expr.pk: New file.
	* pickles/dwarf.pk (DW_TAG_hi_user): Fix value.
	Load dwarf-expr.pk.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf-common.pk: New file.
	* pickles/dwarf-frame.pk: Likewise.
	* pickles/dwarf-pubnames.pk: Likewise.
	* pickles/dwarf-types.pk: Likewise.
	* pickles/dwarf.pk: load the other dwarf- files.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf.pk (Dwarf_Name_Lookup_Table): pubnames and
	pubtypes weren't available until DWARF 3.
	(Dwarf_Name_Lookup_Table): New method `lookup'.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_struct): Fix handling of
	payload->generating_pvm_struct_type.
	Break pass whenever appropriate.
	(pkl_gen_ps_type_struct): Likewise.
	* testsuite/poke.pkl/scons-57.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2020-08-31  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/leb128.pk (LEB128): Define.
	* pickles/dwarf.pk (Dwarf_Block): Define.
	(Dwarf_CFI): Options for DW_CFA_def_cfa_expression,