@@ -1,5 +1,13 @@
 2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-pass.c (pkl_call_node_handlers): Execute pre-order
+	handlers from more generic to more particular, and post-order
+	handlers from more particular to more generic.
+	* libpoke/pkl-pass.h: Document new precedence of handlers based on
+	the ordering.
+
+2020-09-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-pass.c (pkl_do_pass_1): Pass the right pass order to
 	pkl_cal_node_handlers.
 	(pkl_call_node_handlers): Adjust accordingly.
